--- a/t.html
+++ b/t.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
- <table log-set-param="table_view" class="table-view log-set-param" border="1">
+ <table  border="1">
   <tbody>
    <tr>
     <td width="66" align="left" valign="center">
